<resources>
    <string name="app_name">Blogchain</string>
    <string name="all_coins">All coins</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="market_info">Market info</string>
    <string name="converter">Converter</string>
    <string name="favorites">Favorites</string>
    <string name="events">Events</string>
    <string name="portfolio">Portfolio</string>
    <string name="exchanges">Exchanges</string>
    <string name="ico">ICO</string>
    <string name="mining">Mining</string>
    <string name="settings">Settings</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="hour_price_change">1h:</string>
    <string name="day_price_change">24h:</string>
    <string name="week_price_change">7d:</string>
    <string name="add_remove_to_favorites">Add/Remove to favorites</string>
    <string name="share">Share</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="no_portfolios">You have no portfolios\nUse button to add</string>
    <string name="portfolios">Portfolios</string>
    <string name="add_portfolio">Add portfolio</string>
    <string name="portfolio_name">Portfolio name</string>
    <string name="description">Description</string>
    <string name="required">*Required</string>
</resources>
